WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125505
[WK2][SOUP] WebContext::setIgnoreTLSErrors should send SetIgnoreTLSErrors to the network process when network process is enabled
https://bugs.webkit.org/show_bug.cgi?id=125505
Summary
[WK2][SOUP] WebContext::setIgnoreTLSErrors should send SetIgnoreTLSErrors to ...
Kwang Yul Seo
Reported
2013-12-10 05:49:37 PST
This is a follow-up patch of
r160355
(
Bug 125490
)
Attachments
Patch
(1.79 KB, patch)
2013-12-10 06:02 PST
,
Kwang Yul Seo
no flags
Details
Formatted Diff
Diff
Patch
(1.86 KB, patch)
2013-12-10 07:00 PST
,
Kwang Yul Seo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kwang Yul Seo
Comment 1
2013-12-10 06:02:46 PST
Created
attachment 218861
[details]
Patch
Carlos Garcia Campos
Comment 2
2013-12-10 06:31:33 PST
Comment on
attachment 218861
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=218861&action=review
> Source/WebKit2/UIProcess/gtk/WebContextGtk.cpp:151 > + sendToNetworkingProcess(Messages::NetworkProcess::SetIgnoreTLSErrors(m_ignoreTLSErrors));
Here you already know you want to send the message to the network process, so you can call directly networkProcess()->send(Messages::NetworkProcess::SetIgnoreTLSErrors(m_ignoreTLSErrors)); You should probably check also that networkProcess is not null if (usesNetworkProcess() && networkProcess()) networkProcess()->send(Messages::NetworkProcess::SetIgnoreTLSErrors(m_ignoreTLSErrors));
Kwang Yul Seo
Comment 3
2013-12-10 07:00:06 PST
Created
attachment 218868
[details]
Patch
WebKit Commit Bot
Comment 4
2013-12-10 07:36:51 PST
Comment on
attachment 218868
[details]
Patch Clearing flags on attachment: 218868 Committed
r160364
: <
http://trac.webkit.org/changeset/160364
>
WebKit Commit Bot
Comment 5
2013-12-10 07:36:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug