[WK2][SOUP] WebContext::setIgnoreTLSErrors should send SetIgnoreTLSErrors to the network process when network process is enabled https://bugs.webkit.org/show_bug.cgi?id=125505

Patch by Kwang Yul Seo <skyul@company100.net> on 2013-12-10
Reviewed by Carlos Garcia Campos.

This is a follow-up patch for r160355.

* UIProcess/gtk/WebContextGtk.cpp:
(WebKit::WebContext::setIgnoreTLSErrors):

Canonical link: https://commits.webkit.org/143571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160364 268f45cc-cd09-0410-ab3c-d52691b4dbfc